--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,3 +1,12 @@
+<!-- <div class="d-flex h-100">
+    <div class="col-3 d-flex h-100 border border-dark">
+        <app-company-list [companyList]="companies"></app-company-list>
+    </div>
+    <div class="h-100 w-100 borer border-dark">
+        <router-outlet></router-outlet>
+    </div>
+</div> -->
+
 <div class="d-flex flex-grow-1 h-100">
     <div class="flex-column primary-aside col-3 h-100"> 
         <app-company-list [companyList]="companies"></app-company-list>
