--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="h-100 w-100 p-3">
+    <div class="d-flex flex-column h-100 w-100 border border-dark">
+        <div>
+            <app-header></app-header>
+        </div>
+
+
+        <div class="h-100">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
