--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -1,4 +1,21 @@
-<ul class="list-group">
-  <li class="list-group-item d-flex justify-content-between align-items-center border" *ngFor="let company of companyList">
-    {{company.name}} <button type="button" class="btn btn-primary">Edit</button></li>
-</ul>
+<div class="h-100 d-glex flex-column">
+  <div class="m-2">
+    <div class="d-flex justify-content-between m-2">
+      <div class="fs-2"> Company</div>
+    </div>
+    <div class="w-100 mb-3">
+      <input type="text " placeholder="Search" class="w-100 p-2 border-dark">
+    </div>
+
+    <!-- <ul class="nav flex-column flex-nowrap">
+      <li class="nav-item" *ngFor="let company of companyList">
+        <a class="nav-link d-flex flex-column  align-items-center justify-content-between" href="#">
+          <div class="nav-text pt-2">{{company.name}}</div>
+          <i class="bi bi-pencil-square"></i>                          
+        </a>
+      </li> -->
+    <!-- </ul>     -->
+      <li class="list-group-item d-flex justify-content-between align-items-center w-100 border-0 p-2" *ngFor="let company of companyList">{{company.name}} <i class="bi bi-pencil-square"></i></li>   
+    
+  </div>
+</div>
