--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,10 +1,9 @@
+<nav class="navbar border  border-dark  ">
+  <div>
 
+    <span class="navbar-toggler-icon p-3"></span>
+    <span class="p-4 ">Company</span>
 
- 
-  <nav class="navbar">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </nav>
+  </div>
+  <div></div>
+</nav>
