--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../src/assets/scss/base/index";
-@import "../src/assets/scss/vendor/bootstrap_index"
+@import "/src/assets/scss/base/index";
+@import "/src/assets/scss/vendor/index";
+@import "/node_modules/bootstrap-icons/font/bootstrap-icons"
