feat: get by id call, save method work

--- a/src/app/company/company-form/company-form.component.html
+++ b/src/app/company/company-form/company-form.component.html
@@ -1,4 +1,4 @@
-<h4 class="p-3"> Add Company</h4>
+<!-- <h4 class="p-3"> Add Company</h4>
 <form class="container p-2 mt-1 border" [formGroup]="companyForm" (ngSubmit)="saveCompany()">
     <div class="mb-1 p-1">        
         <input class="form-control" id="name" formControlName="name" placeholder="Company Name">        
@@ -7,5 +7,23 @@
         <input class="form-control" id="description" formControlName="description" placeholder="Company Description">        
     </div>
     <button type="submit" class="btn btn-success">Save</button>
-    
+    falsy : 0,false,null,undefined
+</form> -->
+
+<h4 class="p-3"> Add Company</h4>
+<form class="container p-2 mt-1  " [formGroup]="companyForm" (ngSubmit)="saveCompany()">
+    <div class="mb-1 p-1">        
+        <input class="form-control border border-dark"  id="name" formControlName="name" placeholder="Company Name">        
+    </div>
+    <div class="mb-1 p-1">        
+        <input class="form-control border border-dark"  id="description" formControlName="description" placeholder="Company Description">        
+    </div>
+    <div class="mb-1 p-1">        
+        <input class="form-control border border-dark" id="description" formControlName="description" placeholder="Select Tags">        
+    </div>
+     <div class="mb-1 p-1">        
+        <input class="form-control border border-dark" id="description" formControlName="description" placeholder="Select Logo">        
+    </div>
+    <button type="submit" class="btn btn-success ms-2 ">Save</button>
+    <button type="button" class="btn btn-success ms-2" (click)="resetForm()">Reset</button>
 </form>
