--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -1,21 +1,39 @@
-<div class="h-100 d-glex flex-column">
+<!-- <div class="h-100 d-glex flex-column">
   <div class="m-2">
     <div class="d-flex justify-content-between m-2">
       <div class="fs-2"> Company</div>
     </div>
     <div class="w-100 mb-3">
       <input type="text " placeholder="Search" class="w-100 p-2 border-dark">
-    </div>
+    </div> -->
 
-    <!-- <ul class="nav flex-column flex-nowrap">
+<!-- <ul class="nav flex-column flex-nowrap">
       <li class="nav-item" *ngFor="let company of companyList">
         <a class="nav-link d-flex flex-column  align-items-center justify-content-between" href="#">
           <div class="nav-text pt-2">{{company.name}}</div>
           <i class="bi bi-pencil-square"></i>                          
         </a>
       </li> -->
-    <!-- </ul>     -->
-      <li class="list-group-item d-flex justify-content-between align-items-center w-100 border-0 p-2" *ngFor="let company of companyList">{{company.name}} <i class="bi bi-pencil-square"></i></li>   
+<!-- </ul>     -->
+<!-- <li class="list-group-item d-flex justify-content-between align-items-center w-100 border-0 p-2" *ngFor="let company of companyList">{{company.name}} <i class="bi bi-pencil-square"></i></li>   
     
+  </div>
+</div> -->
+
+<div class="h-100 d-glex flex-column">
+  <div class="m-2">
+    <div class="d-flex justify-content-between m-2">
+      <div class="fs-2"> Company </div><i class="bi bi-plus-circle fs-2"></i>
+    </div>
+    <div class="w-100 mb-3">
+      <input type="text " placeholder="Search" class="w-100 p-2 border-dark">
+    </div>
+
+    <li class="list-group-item d-flex justify-content-between align-items-center w-100  p-2  border border-dark"
+      *ngFor="let company of companyList" (click)="getCompanyDetail(company)">
+      <span class=" border border-dark rounded-circle fs-3">{{company.name |companyLogo}} </span>
+      <span>{{ company.name}}</span> <i class="bi bi-x-circle fs-4"></i>
+    </li>
+
   </div>
 </div>
