--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -7,11 +7,12 @@
     </div>
 </div> -->
 
-<div class="d-flex flex-grow-1 h-100">
+<div class="d-flex flex-grow-1 h-100 border border-dark">
     <div class="flex-column primary-aside col-3 h-100"> 
-        <app-company-list [companyList]="companies"></app-company-list>
+        <app-company-list [companyList]="companies" (companyId)="getCompanyDetailById($event)"></app-company-list>
     </div>
-    <div class="flex-column flex-grow-1 h-100">
-        <app-company-form></app-company-form>
+    <div class="flex-column flex-grow-1 h-100 border border-dark">
+        <router-outlet></router-outlet>
+        <!-- <app-company-form (companyDetail)="saveCompany($event)" [companyDetails]="companyDetails"></app-company-form> -->
     </div>
 </div>
